--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,24 @@
-org.gradle.jvmargs  = -Xmx1G
-
-#Fabric properties
-minecraft_version   = 1.16.5
-yarn_mappings       = 1.16.5+build.6
-loader_version      = 0.11.3
-
-#Mod properties
-mod_version         = 1.1.1
-maven_group         = dev.semisol.quasarclient
-archives_base_name  = quasarclient
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+kotlin.code.style=official
+org.gradle.jvmargs=-Xmx3G
+# Fabric
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.6
+loader_version=0.11.3
+fabric_version=0.33.0+1.16
+api_version=0.1.3+12a8474cfa
+resource_loader_version=0.2.9+e5d3217f4e
+loom_version=0.6-SNAPSHOT
+# KAMI
+mod_version=1.1.1
+maven_group=dev.semisol.quasarclient
+archives_base_name=quasarclient
+# Dependencies
+kotlin_version=1.4.32
+fiber_version=fix~undetected-mutation-SNAPSHOT
+imgui_version=1.80-1.5.0
+satin_version=1.5.0
+reflections_version=0.9.12
+alpine_version=1.9
+fuzzywuzzy_version=1.3.1
